[gd_scene load_steps=6 format=3 uid="uid://xnpsnll1wbvg"]

[ext_resource type="Script" path="res://scenes/battle.gd" id="1_47qh3"]
[ext_resource type="PackedScene" uid="uid://b7j0rrflmotgs" path="res://scenes/player/player_battle_2.tscn" id="3_17whm"]
[ext_resource type="Texture2D" uid="uid://e162t0pip2u4" path="res://arts/tiles/бой фон 2.png" id="3_uo5rw"]

[sub_resource type="Gradient" id="Gradient_dc77q"]
colors = PackedColorArray(0, 0, 0, 1, 0.180392, 0.180392, 0.180392, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xdm31"]
gradient = SubResource("Gradient_dc77q")
fill_from = Vector2(0.477064, 0)
fill_to = Vector2(0.481651, 0.357798)

[node name="battle" type="Node2D"]
script = ExtResource("1_47qh3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2972.5, 3223)
scale = Vector2(77.3594, 62.7813)
texture = SubResource("GradientTexture2D_xdm31")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2864, 3496)
zoom = Vector2(0.165, 0.165)
limit_left = -760
limit_top = 0
limit_right = 6990
limit_bottom = 5395
editor_draw_limits = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(2864, 3496)
remote_path = NodePath("../Camera2D")

[node name="all_battle_time" type="Timer" parent="."]
wait_time = 9.0

[node name="heal_stone" type="Timer" parent="."]
wait_time = 2.0

[node name="burn_vial" type="Timer" parent="."]

[node name="БойФон2" type="Sprite2D" parent="."]
position = Vector2(2800, 3888)
texture = ExtResource("3_uo5rw")

[node name="player_battle2" parent="." instance=ExtResource("3_17whm")]
position = Vector2(2880, 4600)

[node name="enemy_position" type="Node2D" parent="."]
position = Vector2(2840, 2856)

[connection signal="timeout" from="all_battle_time" to="." method="_on_all_battle_time_timeout"]
